# wellbe-2

./: .gitignore  AGENTS.md  README.md  Tiltfile  VISION.md  package-lock.json  package.json
.cursor/rules/: always-commit.mdc  audience-guardrails.mdc  doc-governance.mdc  infra-constraints.mdc  infra-live-monitoring.mdc  jira-autonomy-thresholds.mdc  jira-epic-priorities.mdc  jira-mcp-selection.mdc  jira-post-execution-comments.mdc  jira-prioritization-logic.mdc  jira-triage-protocol.mdc  jira-triage-taxonomy.mdc  jira-trigger-detection.mdc  jira-writing-standards.mdc  research-protocol.mdc  systematic-fixing.mdc  ui-vision-prompt-sync.mdc  ui-vision-sync.mdc  wellbe-vision-guardrails.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml  db-migrations.yml  safety-gate.yml
analysis/: wellbe-research-synthesis.canvas.tsx
apps/mobile/: package.json
apps/web/: eslint.config.mjs  next.config.mjs  package.json  tsconfig.json
archive/: README.md
archive/analysis/: README.md
backend/: Dockerfile  pyproject.toml
backend/apps/api/: Dockerfile  pyproject.toml
backend/apps/api/src/wellbe_api/: config.py  deps.py  errors.py  main.py  mappers.py  openapi_export.py
backend/apps/api/src/wellbe_api/routers/: __init__.py  access.py  investigations.py  phase5.py  render.py  threads_v1.py
backend/apps/api/tests/: test_openapi_specs.py  test_render_validate.py  test_v2_contracts.py
backend/apps/audit-service/: Dockerfile  pyproject.toml
backend/apps/audit-service/src/wellbe_audit_service/: __init__.py  main.py
backend/apps/audit-service/tests/: test_main.py
backend/apps/continuity-worker/: Dockerfile  pyproject.toml
backend/apps/continuity-worker/src/wellbe_continuity_worker/: main.py  smoke.py
backend/apps/ingestion-worker/: Dockerfile  pyproject.toml
backend/apps/ingestion-worker/src/wellbe_ingestion_worker/: config.py  main.py  tasks.py
backend/apps/notification-worker/: pyproject.toml
backend/apps/notification-worker/src/wellbe_notification_worker/: main.py
backend/apps/processing-worker/: Dockerfile  pyproject.toml
backend/apps/processing-worker/src/wellbe_processing_worker/: config.py  main.py  tasks.py
backend/apps/safety-gate/: Dockerfile  pyproject.toml
backend/apps/safety-gate/src/wellbe_safety_gate/: main.py
backend/apps/safety-gate/tests/: test_main.py
backend/apps/temporal-worker/: pyproject.toml
backend/apps/temporal-worker/src/wellbe_temporal_worker/: main.py
backend/apps/temporal-worker/src/wellbe_temporal_worker/workflows/: document_ocr.py
backend/apps/vault-writer/: Dockerfile  pyproject.toml
backend/apps/vault-writer/src/wellbe_vault_writer/: blob_keys.py  config.py  main.py
backend/apps/vault-writer/tests/: test_blob_keys.py
config/local/: api.example.env  ingestion-worker.example.env  processing-worker.example.env  safety-gate.example.env  temporal-worker.example.env  vault-writer.example.env
contracts/openapi/: wellbe-v1.openapi.json  wellbe-v2.openapi.json  wellbe.openapi.json
db/: Dockerfile.migrations  alembic.ini
db/migrations/: env.py
design-preview/: wellbe.html
docs/: system-overview.md
docs/analysis/: benchmark-expected-results.md  benchmark-prediction-vs-actual.md
docs/architecture/: README.md  component-map.md  core-stack-relations.md  development-backlog.md  infra-stack.md  tech-stack.md
docs/decisions/: README.md  _template.md  c1-c2-implementation-status-review.md  c12-audit-notification-contract.md  c13-versioned-api-contract-boundary.md  c4-extraction-scope-split-wel81-wel82.md  continuity-pending-ledger-durable-timers.md  correction-service-layered-provenance.md  deep-grant-role-workspace-model.md  engine-risk-tier-safety-routing.md  evidence-provenance-no-orphan-enforcement.md  external-evidence-graph-separation.md  health-thread-state-machine-enforcement.md  ingestion-adapter-provenance-pattern.md  investigation-object-and-thread-coupling.md  knowledge-graph-node-edge-schema.md  live-metric-safe-escalation-rules.md  processing-pipeline-extraction-orchestration.md  raw-context-vault-immutability-enforcement.md  research-brief-c1-c6.md  research-brief-c1-deep-grant-role-workspace.md  research-brief-c10-safety-gate-evaluation-contract.md  research-brief-c12-c13-alignment-contracts.md  research-brief-c6-graph-visualization.md  research-brief-c6-investigation-evidence-graph.md  research-brief-c8-c9-c11-memory-continuity-correction.md  research-brief-repo-structure.md  research-sandbox-cohort-governance.md  safety-gate-evaluation-contract.md  six-memories-store-structure.md  theory-object-evaluation-and-safety.md  trust-consent-scope-enforcement-pattern.md
docs/evidence/: evidence_to_design_decisions.csv  facts_vs_interpretation.md  key_fact_clusters.csv  key_fact_clusters.md  master_evidence_index.csv  master_source_register.csv  package_counts.csv  v1_strengths_gaps_risks.md  v1_to_v2_delta.csv  wellbe_research_alignment_verdicts.csv  wellbe_v1_feature_inventory.csv  wellbe_v1_module_inventory.csv  wellbe_v1_summary.md
docs/feature-backlog/: feature_backlog.md  feature_backlog_v2.csv  feature_backlog_v2.md  feature_to_evidence_map.csv  features_to_defer_or_avoid.md  mvp_plan.md  prioritization.md
docs/implementation/: api_event_model.md  implementation_roadmap.md  migration_from_v1.md  success_metrics.md  technical_architecture_notes.md  ui_vision.md  ui_vision_implementation_prompt.md
docs/safety/: do_not_diagnose_rules.md  privacy_and_consent_model.md  regulatory_boundary_notes.md  risk_register_v2.csv  safety_model.md
docs/system-design/: architecture.md  architecture_layers.csv  core_objects.md  data_model.csv  health_thread_state_machine.md  integrations.md  intelligence_engines.md  knowledge_graph.md  platform_identity.md  system_design.md  system_principles.md  wellbe_v2_system_design.md
docs/workflows/: clinician_handoff_packet.md  health_thread_lifecycle.md  low_resource_workflow.md  patient_workflow.md  post_visit_continuity_workflow.md  pre_visit_workflow.md  results_and_referrals_workflow.md
infra/k8s/: configmaps.yaml  deploy.sh  (+8 more)
scripts/: local-up.sh
(+998 files in other folders)
