[project]
name = "wellbe-audit-service"
version = "0.1.0"
requires-python = ">=3.13"
description = "C12 Audit & Notification Service: append-only audit and notification policy API."
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "wellbe-contracts",
    "wellbe-c12-audit",
]

[tool.uv.sources]
wellbe-contracts = { workspace = true }
wellbe-c12-audit = { workspace = true }
