[project]
name = "wellbe-processing-worker"
version = "0.1.0"
requires-python = ">=3.13"
description = "C4 Processing Worker: Dramatiq lightweight extraction jobs."
dependencies = [
    "wellbe-platform",
    "wellbe-contracts",
    "wellbe-c4-processing",
    "wellbe-c5-evidence",
    "wellbe-c6-graph",
    "wellbe-events",
    "wellbe-db",
    "wellbe-c2-vault",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "dramatiq[redis]>=1.17",
    "httpx>=0.28",
]

[tool.uv.sources]
wellbe-platform = { workspace = true }
wellbe-contracts = { workspace = true }
wellbe-c4-processing = { workspace = true }
wellbe-c5-evidence = { workspace = true }
wellbe-c6-graph = { workspace = true }
wellbe-events = { workspace = true }
wellbe-db = { workspace = true }
wellbe-c2-vault = { workspace = true }
